--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   "dependencies": {
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
+    "dayjs": "^1.11.13",
+    "fs-extra": "^11.3.0",
+    "graphql-request": "^7.1.2",
     "jquery": "^3.7.1",
     "node-fetch": "^3.3.2",
     "sass": "^1.79.4"
