--- a/.github/workflows/update-events.yml
+++ b/.github/workflows/update-events.yml
@@ -2,43 +2,46 @@ name: Update Meetup Events
 
 on:
   schedule:
-    - cron: '0 0 * * *' # every day at midnight UTC
+    - cron: "0 6 * * *" # daily at 6am UTC
   workflow_dispatch:
 
 jobs:
-  
   update-events:
     runs-on: ubuntu-latest
-
+    env:
+      MEETUP_CLIENT_ID: ${{ secrets.MEETUP_CLIENT_ID }}
+      MEETUP_CLIENT_SECRET: ${{ secrets.MEETUP_CLIENT_SECRET }}
+      MEETUP_REFRESH_TOKEN: ${{ secrets.MEETUP_REFRESH_TOKEN }}
     steps:
-      - name: Checkout code
+      - name: Checkout repo
         uses: actions/checkout@v3
 
-      - name: Set up Node.js
+      - name: Set up Node
         uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version: '18'
 
       - name: Install dependencies
-        run: npm install graphql-request dayjs fs-extra
+        run: npm install graphql-request
 
-      - name: Run fetchEvents script
-        env:
-          MEETUP_CLIENT_ID: ${{ secrets.MEETUP_CLIENT_ID }}
-          MEETUP_CLIENT_SECRET: ${{ secrets.MEETUP_CLIENT_SECRET }}
-          MEETUP_REFRESH_TOKEN: ${{ secrets.MEETUP_REFRESH_TOKEN }}
+      - name: Run fetch script
         run: node scripts/fetchEvents.mjs
 
-      - name: Commit and push changes
-        if: success()
+      - name: Commit and push if changed
         run: |
           git config user.name "github-actions"
-          git config user.email "actions@github.com"
-          git add data/events.json
-          git commit -m "Update events.json from Meetup"
-          git push
-  
-  build-site:
-    needs: update-events
-    uses: ./.github/workflows/hugo-build.yaml
-        
+          git config user.email "github-actions@github.com"
+          if [[ `git status --porcelain` ]]; then
+            git add data/events.json
+            git commit -m "Update events from Meetup"
+            git push
+          else
+            echo "No changes to commit"
+          fi
+
+      - name: Trigger Hugo build
+        uses: peter-evans/repository-dispatch@v2
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          repository: stlgamedev/STLGameDevSite
+          event-type: build-site
