--- a/hugo.toml
+++ b/hugo.toml
@@ -46,6 +46,14 @@ publishDir = "public/"
     [ menus.main.params ]
       disabled = true
 
+[permalinks]
+  posts = "/blog/:slug/"
+  news = "/news/:slug/"
+  events = "/events/:slug/"
+  directory = "/directory/:slug/"
+  resources = "/resources/:slug/"
+
+
 [markup.goldmark.renderer]
   unsafe = true
 
