final try for today

--- a/.github/workflows/update-events.yml
+++ b/.github/workflows/update-events.yml
@@ -1,66 +1,44 @@
-name: Update Meetup Events
+name: Update Events
 
 on:
   schedule:
-    - cron: "0 6 * * *" # Run at 6 AM UTC every day
+    - cron: '0 0 * * *' # every midnight UTC
   workflow_dispatch:
 
 jobs:
   update-events:
     runs-on: ubuntu-latest
-    env:
-      MEETUP_CLIENT_ID: ${{ secrets.MEETUP_CLIENT_ID }}
-      MEETUP_CLIENT_SECRET: ${{ secrets.MEETUP_CLIENT_SECRET }}
-      MEETUP_REFRESH_TOKEN: ${{ secrets.MEETUP_REFRESH_TOKEN }}
-      ENCRYPTION_KEY: ${{ secrets.ENCRYPTION_KEY }}
     steps:
-      - name: Checkout code
+      - name: Checkout repo
         uses: actions/checkout@v3
 
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version: '18'
 
       - name: Install dependencies
         run: npm install graphql-request
 
-      - name: Decrypt Refresh Token (if encrypted exists)
-        run: |
-          if [[ -f ".github/.refresh_token.enc" ]]; then
-            openssl enc -aes-256-cbc -d -in .github/.refresh_token.enc \
-              -out .github/.refresh_token.txt \
-              -pass pass:${ENCRYPTION_KEY}
-          fi
-
       - name: Run fetchEvents script
+        env:
+          MEETUP_CLIENT_ID: ${{ secrets.MEETUP_CLIENT_ID }}
+          MEETUP_CLIENT_SECRET: ${{ secrets.MEETUP_CLIENT_SECRET }}
+          MEETUP_REFRESH_TOKEN: ${{ secrets.MEETUP_REFRESH_TOKEN }}
+          ENCRYPTION_KEY: ${{ secrets.ENCRYPTION_KEY }}
         run: node scripts/fetchEvents.mjs
 
-      - name: Encrypt & Commit new Refresh Token
+      - name: Commit and push changes
         run: |
-          if [[ -f ".github/.refresh_token.txt" ]]; then
-            openssl enc -aes-256-cbc -salt -in .github/.refresh_token.txt \
-              -out .github/.refresh_token.enc -pass pass:${ENCRYPTION_KEY}
-            rm .github/.refresh_token.txt
-            git config user.name "GitHub Actions"
-            git config user.email "actions@github.com"
-            git add .github/.refresh_token.enc
-            git commit -m "🔒 Update encrypted OAuth refresh token"
-            git push
-          fi
+          git config user.name "github-actions"
+          git config user.email "github-actions@github.com"
+          git add data/events.json .github/.refresh_token.enc
+          git diff --quiet && git diff --staged --quiet || git commit -m "🔄 Update events list"
+          git push
 
-      - name: Commit and push events if changed
-        run: |
-          git diff --exit-code data/events.json || (
-            git config user.name "GitHub Actions"
-            git config user.email "actions@github.com"
-            git add data/events.json
-            git commit -m "Update events.json from Meetup"
-            git push
-          )
-
-      - name: Trigger Hugo Build
-        uses: peter-evans/repository-dispatch@v2
+      - name: Trigger site build
+        uses: benc-uk/workflow-dispatch@v1
         with:
+          workflow: hugo-build.yml
+          repo: ${{ github.repository }}
           token: ${{ secrets.GITHUB_TOKEN }}
-          event-type: build-site
