--- a/.github/workflows/grab-events.yaml
+++ b/.github/workflows/grab-events.yaml
@@ -19,7 +19,9 @@ jobs:
           node-version: '20'
 
       - name: Install ics-to-json
-        run: npm install -g ics-to-json
+        run: |
+          npm install -g ics-to-json
+          echo "$(npm bin -g)" >> $GITHUB_PATH
 
       - name: Convert .ics to JSON
         run: |
