changing to use js

--- a/.github/workflows/grab-events.yaml
+++ b/.github/workflows/grab-events.yaml
@@ -18,15 +18,14 @@ jobs:
         with:
           node-version: '20'
 
-      - name: Install ics-to-json
-        run: |
-          npm install -g ics-to-json
-          echo "$(npm bin -g)" >> $GITHUB_PATH
+      - name: Install dependencies
+        run: npm install node-ical
+        
+      - name: Download calendar
+        run: curl -s "https://calendar.google.com/calendar/ical/c_dd5b9f0b9b6887c36cde8da86ef9282654e82998c89b4787cc8100fb65dc225e%40group.calendar.google.com/public/basic.ics" -o calendar.ics
 
-      - name: Convert .ics to JSON
-        run: |
-          curl -s "https://calendar.google.com/calendar/ical/c_dd5b9f0b9b6887c36cde8da86ef9282654e82998c89b4787cc8100fb65dc225e%40group.calendar.google.com/public/basic.ics" -o calendar.ics
-          ics-to-json calendar.ics > data/events.json
+      - name: Convert ICS to JSON
+        run: node scripts/convert-ics.js
 
       - name: Commit only if changed
         run: |
