--- a/.github/workflows/grab-events.yaml
+++ b/.github/workflows/grab-events.yaml
@@ -21,10 +21,7 @@ jobs:
           node-version: '20'
 
       - name: Install dependencies
-        run: |
-            npm install node-ical
-            npm install luxon
-        
+        run: npm install ical-expander luxon
         
       - name: Download calendar
         run: curl -s "https://calendar.google.com/calendar/ical/c_dd5b9f0b9b6887c36cde8da86ef9282654e82998c89b4787cc8100fb65dc225e%40group.calendar.google.com/public/basic.ics" -o calendar.ics
