--- a/.github/workflows/weekly-standup.yaml
+++ b/.github/workflows/weekly-standup.yaml
@@ -7,6 +7,22 @@ on:
     - cron: '0 13 * * 1'
 
 jobs:
+  check-repo:
+    runs-on: ubuntu-latest
+    outputs:
+        is-official: ${{ steps.set.outputs.is-official }}
+    steps:
+        -   name: Check if running on stlgamedev/STLGameDevSite
+            id: set
+            run: |
+                if [[ "${GITHUB_REPOSITORY}" == "stlgamedev/STLGameDevSite" ]]; then
+                    echo "Running in official repo."
+                    echo "is-official=true" >> $GITHUB_OUTPUT
+                else
+                    echo "⚠️ This workflow runs only on the main stlgamedev/STLGameDevSite repo. Skipping..."
+                    echo "is-official=false" >> $GITHUB_OUTPUT
+                fi
+
   message:
     runs-on: ubuntu-latest
     steps:
