--- a/data/directory/meeplasheep.yml
+++ b/data/directory/meeplasheep.yml
@@ -3,3 +3,4 @@ Website: 'https://www.meepalasheep.com/'
 Description: "I like to make stuff! Check out my website to see some things I've made!"
 Projects:
   - gingersnap
+  - orphansofprovidence
