--- a/.github/workflows/hugo-build.yaml
+++ b/.github/workflows/hugo-build.yaml
@@ -47,8 +47,6 @@ jobs:
         needs: check-repo
         if: needs.check-repo.outputs.is-official == 'true'
         runs-on: ubuntu-latest
-        env:
-            HUGO_VERSION: 0.147.2
         outputs:
             base_url: ${{ steps.pages.outputs.base_url }}
             new_news_items: ${{ steps.compare-new-news.outputs.new_items }}
@@ -59,17 +57,23 @@ jobs:
             #             curl -s https://stlgame.dev/news/index.json -o news_index.json
             #             old_news=$(jq . news_index.json)
             #             echo 'old_news'=$old_news >> $GITHUB_OUTPUT
-            -   name: Install Hugo CLI
-                run: |
-                    wget -O ${{ runner.temp }}/hugo.deb https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_linux-amd64.deb \
-                    && sudo dpkg -i ${{ runner.temp }}/hugo.deb
-            -   name: Install Dart Sass
-                run: sudo snap install dart-sass
             -   name: Checkout
                 uses: actions/checkout@v4
                 with: 
                     submodules: recursive
                     fetch-depth: 0
+            -   name: Read Hugo Version
+                id: hugo-version
+                run: |
+                    HUGO_VERSION=$(cat .hugo-version)
+                    echo "version=$HUGO_VERSION" >> $GITHUB_OUTPUT
+                    echo "Using Hugo version: $HUGO_VERSION"
+            -   name: Install Hugo CLI
+                run: |
+                    wget -O ${{ runner.temp }}/hugo.deb https://github.com/gohugoio/hugo/releases/download/v${{ steps.hugo-version.outputs.version }}/hugo_extended_${{ steps.hugo-version.outputs.version }}_linux-amd64.deb \
+                    && sudo dpkg -i ${{ runner.temp }}/hugo.deb
+            -   name: Install Dart Sass
+                run: sudo snap install dart-sass
             -   name: Setup Pages
                 id: pages
                 uses: actions/configure-pages@v5
